--- a/webapp/src/app/shared/components/atoms/chip/chip.component.css
+++ b/webapp/src/app/shared/components/atoms/chip/chip.component.css
@@ -1,6 +1,6 @@
 .chip{
     border-radius: 4px;
-    font: var(--body-2);
+    font: var(--text-body-2);
     width: fit-content;
     padding: 4px 10px;
 }
@@ -13,4 +13,9 @@
 .variant2{
     background: var(--background-grey);
     color: var(--text-low-emphasis);
+}
+
+.variant3{
+    background: var(--border-100);
+    color: #548BE7;
 }
