--- a/webapp/src/variables.css
+++ b/webapp/src/variables.css
@@ -70,17 +70,17 @@
 
   --text-headline-1: 700 41px/100% var(--text-medium-font-family);
   --text-headline-2: 700 35px/100% var(--text-medium-font-family);
-  --text-headline-3: 700 31px/20px var(--text-medium-font-family);
-  --text-headline-4: 700 28px/20px var(--text-medium-font-family);
-  --text-headline-5: 700 25px/20px var(--text-medium-font-family);
-  --text-headline-6: 700 20px/20px var(--text-medium-font-family);
+  --text-headline-3: 700 31px/140% var(--text-medium-font-family);
+  --text-headline-4: 700 28px/140% var(--text-medium-font-family);
+  --text-headline-5: 700 25px/140% var(--text-medium-font-family);
+  --text-headline-6: 700 20px/140% var(--text-medium-font-family);
 
-  --text-subtitle-1: 400 19px/20px var(--text-medium-font-family);
-  --text-subtitle-2: 500 17px/20px var(--text-high-font-family);
-  --text-body-1: 400 normal 16px/20px var(--text-font-family);
-  --text-body-2: 500 normal 14px/20px var(--text-medium-font-family);
-  --text-caption: 400 normal 12px/20px var(--text-medium-font-family);
-  --text-overline: 500 11px/20px var(--text-medium-font-family);
+  --text-subtitle-1: 400 19px/140% var(--text-medium-font-family);
+  --text-subtitle-2: 500 17px/140% var(--text-high-font-family);
+  --text-body-1: 400 normal 16px/140% var(--text-font-family);
+  --text-body-2: 500 normal 14px/140% var(--text-medium-font-family);
+  --text-caption: 400 normal 12px/140% var(--text-medium-font-family);
+  --text-overline: 500 11px/140% var(--text-medium-font-family);
 
   --text-font-weight: 500;
   --text-light-font-weight: 400;
