--- a/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
+++ b/webapp/src/app/pacman-features/modules/compliance/policy-knowledgebase-details/policy-knowledgebase-details.component.html
@@ -45,8 +45,8 @@
                 <span class="tile-header">Category</span>
                 <div class="tile-content-wrapper">
                     <img *ngIf="selectedCategory"
-                        src="../../../../../assets/icons/category-{{selectedCategory?.toLowerCase()}}.svg">
-                    <span class="tile-content" title="{{selectedCategory}}">{{selectedCategory}}</span>
+                        src="../../../../../assets/icons/category-{{(selectedCategory=='Governance'?'Operations':selectedCategory)?.toLowerCase()}}.svg">
+                    <span class="tile-content" title="{{selectedCategory=='Governance'?'Operations':selectedCategory}}">{{selectedCategory=='Governance'?'Operations':selectedCategory}}</span>
                 </div>
             </div>
         </div>
