--- a/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/target-types.component.html
+++ b/webapp/src/app/pacman-features/modules/admin/asset-groups/target-types/target-types.component.html
@@ -20,7 +20,7 @@
         </div>
         <div class="flex relative z-index textarea-button">
 
-            <button class="submit-btn uppercase" type="button" (click)='goToCreateUpdateDomain()'><i class="fa fa-plus"></i> Create Target Type</button>
+            <button class="submit-btn uppercase" type="button" (click)='goToCreateUpdateDomain()'><i class="fa fa-plus"></i> Create Asset Type</button>
         </div>
     </div>
     <div class="floating-widgets-container data-table-container">
@@ -29,7 +29,7 @@
                 <li class="widget-wrapper relative">
                     <div class="relative">
                         <app-data-table [searchTextValues]='searchTxt' [showGenericMessage]='showGenericMessage' [errorValue]='errorValue' [parentName]="'taggingTargetMessage'" [showingArr]='showingArr' [outerArr]='outerArr' [searchableHeader]='true' [allColumns]='allColumns'
-                            [dataHead]="'All Target Types'" (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)'
+                            [dataHead]="'All Asset Types'" (selectedRow)='goToDetails($event)' [firstPaginator]='firstPaginator' [lastPaginator]='lastPaginator' [totalRows]='totalRows' [currentPointer]='currentPointer' (searchRowTxt)='searchCalled($event)'
                             (previousPageCalled)='prevPage()' (nextPageCalled)='nextPage()' (searchTriggerred)='callNewSearch()'>
                         </app-data-table>
                         <div class="data-table-desc">{{dataTableDesc}}</div>
